<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SpazierenActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/fadein"
            android:layout_width="99dp"
            android:layout_height="89dp"
            android:layout_marginTop="84dp"
            android:contentDescription="@string/fadein"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fadeinthree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.126"
            app:srcCompat="@drawable/plus1" />

        <ImageView
            android:id="@+id/fadeintwo"
            android:layout_width="99dp"
            android:layout_height="89dp"
            android:layout_marginTop="164dp"
            android:contentDescription="@string/fadeintwo"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fadeinsix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/plus2" />

        <ImageView
            android:id="@+id/fadeinthree"
            android:layout_width="99dp"
            android:layout_height="89dp"
            android:layout_marginTop="244dp"
            android:contentDescription="@string/fadeintwothree"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fadeinfive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.302"
            app:srcCompat="@drawable/plus3" />

        <ImageView
            android:id="@+id/fadeinfour"
            android:layout_width="99dp"
            android:layout_height="89dp"
            android:contentDescription="@string/fadeinfour"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fadeinsix"
            app:srcCompat="@drawable/plus4" />


        <ImageView
            android:id="@+id/fadeinfive"
            android:layout_width="99dp"
            android:layout_height="89dp"
            android:contentDescription="@string/fadeinfive"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.858"
            app:srcCompat="@drawable/plus5"
            tools:visibility="invisible" />

        <ImageView
            android:id="@+id/tamagotchi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/pb_energie"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:max="100"
            android:progress="20"
            android:progressDrawable="@drawable/progressbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ProgressBar
            android:id="@+id/pb_hunger"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pb_energie" />

        <TextView
            android:id="@+id/tv_punktezaehler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.382"
            app:layout_constraintStart_toEndOf="@+id/tv_punkte"
            app:layout_constraintTop_toBottomOf="@+id/pb_hunger" />

        <TextView
            android:id="@+id/tv_punkte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:text="@string/tv_punkte"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Hunger" />

        <TextView
            android:id="@+id/tv_energie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/energie"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/pb_energie"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fadeinsix"
            android:layout_width="99dp"
            android:layout_height="89dp"
            android:layout_marginTop="296dp"
            android:layout_marginEnd="104dp"
            android:layout_marginRight="104dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/tamagotchi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/fadeinthree"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/spazeiren_challenge" />

        <TextView
            android:id="@+id/Hunger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/hunger"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/pb_hunger"
            app:layout_constraintTop_toBottomOf="@+id/tv_energie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</LinearLayout>